--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -20,5 +20,13 @@
   <%= @restaurant.stars %>
 </p>
 
+<p>
+  <strong>Chef:</strong>
+  <%= @restaurant.chef %>
+</p>
+
+<h2>Number of reviews <%= @restaurant.reviews.count %></h2>
+
+<%= link_to 'Add Review', new_restaurant_review_path(@restaurant) %> |
 <%= link_to 'Edit', edit_restaurant_path(@restaurant) %> |
 <%= link_to 'Back', restaurants_path %>
